--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="container-fluid bg-white chatbox shadow-lg rounded">
 		<div class="row h-100">
 			<div class="col-md-4 pr-0 d-none d-md-block" id="side-1">
-				<div class="card h-100">
+				<div class="card">
 					<div class="card-header">
 						<div class="row">
 							<div class="col-1 col-sm-1 col-md-1 d-md-none">
@@ -71,7 +71,20 @@
 							</div>
 							<div class="col-5 col-sm-4 col-md-4 col-lg-3 icon">
 								<i class="fa fa-search"></i>
-								<i class="fa fa-paperclip ml-4"></i>
+								<span class="dropdown">
+									<span class="dropdown-toggle" data-toggle="dropdown">
+										<i class="fa fa-paperclip ml-4"></i>
+									</span>
+									<div class="dropdown-menu">
+										<a href="#" class="dropdown-item" onclick="chooseImage()">
+											Image
+											<input type="file" id="imagefile" onchange="sendImage(this);" accept="image/*" style="display: none;">
+										</a>
+										<a href="#" class="dropdown-item">Documents</a>
+										<a href="#" class="dropdown-item">Camera</a>
+										<a href="#" class="dropdown-item">Video</a>
+									</div>
+								</span>
 								<i class="fa fa-ellipsis-v ml-4"></i>
 							</div>
 						</div>
@@ -80,24 +93,45 @@
 						<!-- chat messages here -->
 					</div>
 					<div class="card-footer">
+						<div class="row" style="position: relative;">
+							<div class="col-md-12" id="emoji" style="display: none;">
+								<ul class="nav nav-tabs" id="myTab" role="tablist">
+								  <li class="nav-item">
+								    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#smiley" role="tab" aria-controls="home" aria-selected="true">Smiley</a>
+								  </li>
+								  <li class="nav-item">
+								    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#shape" role="tab" aria-controls="profile" aria-selected="false">Shape</a>
+								  </li>
+								  <li class="nav-item">
+								    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+								  </li>
+								</ul>
+								<div class="tab-content" id="myTabContent">
+								  <div class="tab-pane fade show active" id="smiley" role="tabpanel" aria-labelledby="home-tab"></div>
+								  <div class="tab-pane fade" id="shape" role="tabpanel" aria-labelledby="profile-tab">...</div>
+								  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+								</div>
+							</div>
+						</div>
 						<div class="row">
 							<div class="col-2 col-md-1">
-								<i class="fa fa-smile-o fa-2x"></i>
+								<i class="fa fa-smile-o fa-2x" style="cursor:pointer;" onclick="showEmojiPanel()"></i>
 							</div>
 							<div class="col-8 col-md-10">
-								<input type="text" id="txtMessage" class="form-control form-rounded" placeholder="Type Here...">
+								<input type="text" id="txtMessage" onkeyup="changeSendIcon(this)" onfocus="hideEmojiPanel()" class="form-control form-rounded" placeholder="Type Here...">
 							</div>
 							<div class="col-2 col-md-1">
-								<i class="fa fa-microphone fa-2x"></i>
+								<i id="audioicon" style="cursor: pointer;" onclick="record(this)"  class="fa fa-microphone fa-2x"></i>
+								<i id="sendicon" class="fa fa-paper-plane fa-2x" style="cursor:pointer;display:none;"></i>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div id="divStart" class="text-center">
-					<i class="fa fa-comments mt-5" style="font-size:250px;"></i>
-					<h2 class="mt-3 px-3">Select your friend from the list and start chating.</h2>
-					<center>
-						<a href="#" onclick="showChatList()" class="btn btn-warning d-md-none">New Chat</a>
+					<img src="images/logo.png" style="" class="img-fluid mt-5">
+					<h3 class="mt-3 px-3">Let's Talk with friends...</h3>
+					<center class="mt-5">
+						<a href="#" onclick="showChatList()" class="my-3 btn btn-warning d-md-none">New Chat</a>
 						<button onclick="signin()" id="divsignin" class="btn btn-primary">Sign In</button>
 						<button onclick="signOut()" id="divsignout" class="btn btn-primary">Sign Out</button>
 					</center>
