--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							</div>
 							<div class="col-2 col-md-1">
 								<i id="audioicon" style="cursor: pointer;" onclick="record(this)"  class="fa fa-microphone fa-2x"></i>
-								<i id="sendicon" class="fa fa-paper-plane fa-2x" style="cursor:pointer;display:none;"></i>
+								<i id="sendicon" class="fa fa-paper-plane fa-2x" style="cursor:pointer;display:none;" onclick="SendMessage()"></i>
 							</div>
 						</div>
 					</div>
